test/y_error_20.j
class UWU
{
	Void main()
	{
		Int a;
		Bool b;

		new Int().x = "69";
	}
}
